syntax = "proto3";

package fluence.network.proto;

message Node {
    bytes id = 1;
    bytes ip = 2;
    int32 port = 3;
}

message NodesResponse {
    repeated Node nodes = 1;
}

message PingRequest {
}

message LookupRequest{
    bytes key = 1;
    int32 numberOfNodes = 2;
}

message LookupAwayRequest{
    bytes key = 1;
    bytes moveAwayFrom = 2;
    int32 numberOfNodes = 3;
}

service Kademlia {
    rpc ping(PingRequest) returns (Node);
    rpc lookup(LookupRequest) returns (NodesResponse);
    rpc lookupIterative(LookupRequest) returns (NodesResponse);
    rpc lookupAway(LookupAwayRequest) returns (NodesResponse);
}